--- a/src/dune
+++ b/src/dune
@@ -2,6 +2,7 @@
   (name coqOfOCaml)
   (package coq-of-ocaml)
   (flags
+    -open Merlin_kernel
     -open Ocaml_parsing
     -open Ocaml_typing)
   (public_name coq-of-ocaml)
